background color+ terre text

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <body>
             <div class="header">
                 <div><img class="logo" src="images/foulard.png"></div>
+                
             </div>
 
             <div class="header-bottom-text">
-                <p>Le 49e Groupe Scout!</p>
+                <p>Bienvenue chez ton groupe scout!</p>
             </div>
 
             <div id="mySidenav" class="sidenav">
@@ -82,7 +83,7 @@
                                         dans un premier temps à encourager le mouvement. En 1926, le scoutisme obtint toutefois l’appui de l’Église et entreprit une croissance fulgurante.
                                         <br><br>
                                         Jusque-là strictement masculin, le scoutisme canadien fusionna avec le guidisme en 1980, donnant un nouvel élan à l’organisation. 11 000 membres de 
-                                        plus se joindront à l’Association des scouts du Canada en 1994. Aujourd’hui, le scoutisme te permet de t’accomplir pleinement, en ciblant tes champs 
+                                        plus se joindront à l’<a href="https://scoutsducanada.ca" target="_blank">Association des scouts du Canada</a> en 1994. Aujourd’hui, le scoutisme te permet de t’accomplir pleinement, en ciblant tes champs 
                                         d’intérêts et en t’amenant à en développer de nouveaux. Tu développeras ainsi des outils te permettant d’atteindre ton plein potentiel comme individu, 
                                         comme membre de ta communauté et comme citoyen y jouant un rôle actif.
                                     </em>
@@ -92,9 +93,10 @@
                             </div>
                     </div>
                 <br><br><br><br><br><br>
-            <h2 id="49" class ="title">Le 49e groupe scout</h2>
+            
+            <div  id="text-49">
+                <h2 id="49" class ="title">Le 49e groupe scout</h2>
                 <br><br>
-                    <div class ="text">
                         <h3>Petit historique</h3>
                             <div id="tap-historique" class="text-and-picture">
                                 <p class="text-historique">
@@ -106,7 +108,7 @@
                                     <br><br>
                                     L’année suivante, en 1979, la Ville de Saint-Georges a construit le <b>Pavillon Comrie</b>, grâce à un héritage laissé par <b>M. Thomas Comrie</b>, ingénieur d’origine écossaise et fondateur du plus ancien tournoi de hockey organisé en Amérique du Nord, le réputé Tournoi Comrie. Ce bâtiment est devenu le nouveau point d’ancrage oƯiciel du groupe scout, qui y est basé depuis. Afin d’assurer l’autofinancement du local, les scouts ont versé un loyer jusqu’en 2004. Depuis cette date, bien que le loyer ait été aboli, le groupe assume les coûts liés à l’électricité et à l’entretien.
                                     <br><br>
-                                    Le <b>49e groupe scout de Saint-Georges</b> fait partie de la grande famille de l’<b>Association des Scouts du Canada (ASC)</b> et est membre du District de l’Est du Québec.
+                                    Le <b>49e groupe scout de Saint-Georges</b> fait partie de la grande famille de l’<b>Association des Scouts du Canada (ASC)</b> et est membre du <a href="https://scoutsducanada.ca/district/est-du-quebec/" target="_blank"> District de l’Est du Québec</a>.
                                 </p>
                                 <p>
                                     <div class="container-image">
@@ -116,50 +118,56 @@
                                 </p>  
                             </div>
                         <br><br><br><br>
-                        <h4>Les différents groupes d'âges</h4>
+                        <h3>Les différents groupes d'âges au 49e</h3>
                             <div id="tap-âges"  class="text-and-picture">
                                 <p>
                                     <div class="container-image">
                                         <img src="images/banière_groupe.png" alt="Banière différents groupe" class="picture">
-                                        <div class="overlay-groupe">Voici la liste des différent groupe en plus concis</div>
+                                        <div class="overlay-groupe">Voici une des banières que l'on appporte lors de nos activités</div>
                                     </div>
                                 </p>
                                 <p class="text-âges">
-                                    <b>Castors (7 à 8 ans)</b><br>
+                                    <br><br><br><br>
+                                    <b>Castors (7 à 8 ans)</b><br><br>
                                     Les plus jeunes découvrent le scoutisme par le jeu et l'exploration de la nature. Ils évoluent dans une <b>colonie</b>, divisée en petites équipes appelées <b>huttes</b>, où ils développent leur autonomie dans un cadre sécurisant et amusant. 
-                                    <br><br>
-                                    <b>Louveteaux (9 à 11 ans)</b><br>
+                                    <br><br><br>
+                                    <b>Louveteaux (9 à 11 ans)</b><br><br>
                                     Les Louveteaux grandissent dans une <b>tanière</b> inspirée de l’univers du Livre de la jungle. Ils apprennent le travail d’équipe, s’impliquent dans leur communauté et découvrent les joies du plein air.
-                                    <br><br>
-                                    <b>Aventuriers (12 à 17 ans)</b><br>
+                                    <br><br><br>
+                                    <b>Aventuriers (12 à 17 ans)</b><br><br>
                                     Les Aventuriers vivent pleinement l’expérience du plein air, développent leur leadership et s’engagent à incarner les <b>valeurs scoutes</b>. Ils agissent comme mentors auprès des plus jeunes et participent activement à la vie du groupe. Toujours prêts, leur sac n’est jamais bien loin !
-                                    <br><br>
-                                    <b>Routiers (18 à 25 ans)</b><br>
+                                    <br><br><br>
+                                    <b>Routiers (18 à 25 ans)</b><br><br>
                                     Les Routiers sont les piliers du service <b>communautaire</b>. Leaders au sein du groupe, du district ou de l’ASC, ils mènent leurs propres projets, participent à des rassemblements et s’impliquent ici comme à l’international. Leur mission : construire un monde plus juste et respectueux de la vie autour d’eux. 
 
                                 </p>
                             </div>
                         <br><br><br><br>
-                        <h4>Terre des scouts</h4>
-                            <div id="tap-terre"  class="text-and-picture">
-                                <p class="text-terre">
-                                    En 1989, dans le but d’offrir un contact direct avec la nature et d’inculquer aux jeunes les
-                                    valeurs de conservation, de respect et de connaissance du milieu naturel, le groupe a
-                                    entrepris des démarches pour acquérir un terrain. Après plus de trois ans de
-                                    correspondance avec le ministère de l’Énergie et des Ressources, une <b>terre de la
-                                    Couronne située à Cumberland</b> a pu être louée en mai 1992. Ce site, à seulement 15
-                                    minutes du local scout, permet l’organisation de camps d’été et d’hiver et constitue un lieu
-                                    privilégié pour vivre le scoutisme en nature.
-                                </p>
+                        <h3>La terre des scouts</h3>
+                            <div id="tap-terre" class="text-and-picture" >
+                                <div>
+                                    <p class="text-terre">
+                                        En 1989, dans le but d’offrir un contact direct avec la nature et d’inculquer aux jeunes les
+                                        valeurs de conservation, de respect et de connaissance du milieu naturel, le groupe a
+                                        entrepris des démarches pour acquérir un terrain. Après plus de trois ans de
+                                        correspondance avec le ministère de l’Énergie et des Ressources, une <b>terre de la
+                                        Couronne située à Cumberland</b> a pu être louée en mai 1992. Ce site, à seulement 15
+                                        minutes du local scout, permet l’organisation de camps d’été et d’hiver et constitue un lieu
+                                        privilégié pour vivre le scoutisme en nature.
+                                    </p>
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d36555.92660470899!2d-70.70639430892892!3d46.15435237119812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d46.1241299!2d-70.6822658!4m5!1s0x4cb9bdb3b7d5a207%3A0x58ab1ae44d5db9c9!2sTerre%20des%20scouts!3m2!1d46.2112049!2d-70.6228409!5e1!3m2!1sfr!2sca!4v1748189560941!5m2!1sfr!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                </div>
                                 <p>
                                     <div class="container-image">
-                                        <img src="" alt="" class="picture">
-                                        <div class="overlay-terre"></div>
+                                        <img src="images/marquise_1.png" alt="Photo de notre marquise" class="picture">
+                                        <div class="overlay-terre-1">Notre marquise</div>
+                                        <img src="images/marquise_2.png" alt="Photo de notre marquise et de l'infirmerie" class="picture">
+                                        <div class="overlay-terre-2">Notre marquise et infirmerie</div>
                                     </div>
                                 </p>
                             </div>
-                    </div>
-                <br><br><br><br><br><br>
+                            <br><br><br><br>
+            </div>
             <div id="financement-section" class="financement">
                 <h2 id="financement" class="title">Les moyens de financements</h2>
                     <p>
@@ -167,30 +175,64 @@
                     </p>
                 <div class="financement-grid">
                     <!-- Première ligne -->
-                    <div class="financement-item" onclick="showDetails('calendrier')">
+                    <div class="financement-item" data-title="Calendrier" data-image="images/calendrier.png" onclick="showDetails(this)">
                         <h4>Calendrier</h4>
+                        <div class="financement-details" style="display:none;">
+                            Le calendrier est une campagne annuelle où nous vendons des calendriers personnalisés pour financer nos activités.
+                        </div>
                     </div>
-                    <div class="financement-item" onclick="showDetails('chocolat')">
+                    <div class="financement-item" data-title="Chocolat" data-image="images/chocolat.png" onclick="showDetails(this)">
                         <h4>Chocolat</h4>
+                        <div class="financement-details" style="display:none;">
+                            La vente de chocolat est une tradition qui aide à financer nos projets tout en offrant de délicieuses friandises.
+                        </div>
                     </div>
-                    <div class="financement-item" onclick="showDetails('lave')">
+                    <div class="financement-item" data-title="Lave-O-Thon" data-image="images/lave-o-thon.png" onclick="showDetails(this)">
                         <h4>Lave-O-Thon</h4>
+                        <div class="financement-details" style="display:none;">
+                            Le Lave-O-Thon est une activité où nous lavons des voitures pour collecter des fonds tout en interagissant avec la communauté.
+                        </div>
                     </div>
 
                     <!-- Texte entre les deux séries -->
                     <div class="financement-separator">
-                        Voici d'autres campagnes de financement importantes pour soutenir nos activités :
+                        Ensuite, ceux-ci sont nos moyens de financements qui ne sont pas effectué par 
+                        nous directement, mais plutôt par l’aide de la communauté:
                     </div>
 
                     <!-- Deuxième ligne -->
-                    <div class="financement-item" onclick="showDetails('canette')">
+                    <div class="financement-item" data-title="Canette" data-image="images/canette.png" onclick="showDetails(this)">
                         <h4>Canette</h4>
+                        <div class="financement-details" style="display:none;">
+                            La collecte de canettes est une initiative écologique et financière pour soutenir nos activités.
+                        </div>
                     </div>
-                    <div class="financement-item" onclick="showDetails('linge')">
-                        <h4>Linge</h4>
+                    <div class="financement-item" data-title="Vêtement" data-image="images/linge.png" onclick="showDetails(this)">
+                        <h4>Vêtement</h4>
+                        <div class="financement-details" style="display:none;">
+                            Nous collectons des vêtements usagés pour les revendre ou les recycler afin de financer nos projets.
+                        </div>
                     </div>
-                    <div class="financement-item" onclick="showDetails('dons')">
+                    <div class="financement-item" data-title="Dons" data-image="images/dons.png" onclick="showDetails(this)">
                         <h4>Dons</h4>
+                        <div class="financement-details" style="display:none;">
+                            Le 49e groupe scout de Saint-Georges ne pourrait poursuivre sa mission sans le soutien généreux de <b>précieux partenaires</b>.<br><br>
+                            Voici une liste non exhaustive de ceux qui nous appuient fidèlement :
+                            <ul class="don-list">
+                              <li>L’Œuvre Saint-Édouard</li>
+                              <li>La Corporation du Petit Séminaire de Saint-Georges</li>
+                              <li>La Ville de Saint-Georges</li>
+                              <li>Le Club Rotary</li>
+                              <li>Les Chevaliers de Colomb</li>
+                              <li>Club Richelieu</li>
+                              <li>Walmart</li>
+                              <li>Canadian Tire</li>
+                              <li>La Pralinière</li>
+                              <li>Tous les commerçants participant à notre Lavothon annuel</li>
+                              <li>Etc.</li>
+                            </ul>
+                            <b>Un immense merci à tous ceux qui, par leur générosité, permettent à notre groupe scout de rayonner et de transmettre les valeurs du scoutisme aux jeunes de notre communauté!</b>
+                        </div>
                     </div>
                 </div>
 
@@ -200,29 +242,30 @@
                         <span class="close-details" onclick="hideDetails()">&times;</span>
                         <h3 id="details-title"></h3>
                         <p id="details-text"></p>
-                        <img id="details-image" src="" alt="Image de la campagne">
+                        <div id="details-image"></div>
                     </div>
                 </div>
-            </div>
                 <br><br><br><br><br><br>
+            </div>
+            <div id="text-implication">
             <h2 id="implication" class ="title">Comment s'impliquer?</h2>
                 <br><br>
                     <div class ="text">
-                        <h4>Animateur</h4>
+                        <h3>Animateur</h3>
                             <div id="tap-animateur"  class="text-and-picture">
                                 <p class="text-animateur">
 
                                 </p>
                             </div>
                         <br><br><br><br>
-                        <h4>Membre du CA</h4>
+                        <h3>Membre du CA</h3>
                             <div id="tap-CA"  class="text-and-picture">
                                 <p class="text-CA">
 
                                 </p>
                             </div>
                         <br><br><br><br>
-                        <h4>Aide de camps ou d'activités</h4>
+                        <h3>Aide de camps ou d'activités</h3>
                             <div id="tap-aide"  class="text-and-picture">
                                 <p class="text-aide">
 
@@ -230,6 +273,7 @@
                             </div>
                     </div>
                 <br><br><br><br><br><br>
+            </div>
             <h2 id="photos" class ="title">Section photos</h2>
                 <br><br>
                     <div class="text">
