--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
                             </div>
                     </div>
                 <br><br><br><br><br><br>
-            
+            <img src="images/quote-2.png" alt="Citation de Baden-Powell" class="quote">
             <div  id="text-49">
+                <br><br><br><br><br>
                 <h2 id="49" class ="title">Le 49e groupe scout</h2>
                 <br><br>
                         <h3>Petit historique</h3>
@@ -247,32 +248,48 @@
                 </div>
                 <br><br><br><br><br><br>
             </div>
+             <img src="images/quote-1.png" alt="Citation de Baden-Powell" class="quote">
             <div id="text-implication">
-            <h2 id="implication" class ="title">Comment s'impliquer?</h2>
-                <br><br>
-                    <div class ="text">
-                        <h3>Animateur</h3>
-                            <div id="tap-animateur"  class="text-and-picture">
-                                <p class="text-animateur">
-
-                                </p>
-                            </div>
-                        <br><br><br><br>
-                        <h3>Membre du CA</h3>
-                            <div id="tap-CA"  class="text-and-picture">
-                                <p class="text-CA">
-
-                                </p>
-                            </div>
-                        <br><br><br><br>
-                        <h3>Aide de camps ou d'activités</h3>
-                            <div id="tap-aide"  class="text-and-picture">
-                                <p class="text-aide">
-
-                                </p>
-                            </div>
+                <br><br><br><br><br>
+                <h2 id="implication" class="title">Comment s'impliquer?</h2>
+                    <p id="intro-implication">
+                    Tu aime t’impliquer dans ta communauté, mettre en application tes idées folles et faire du bénévolat? Alors rejoins notre gang! Nous cherchons toujours plus de personnes pour nous aider dans nos aventures!
+                    </p>
+                <div class="implication-list">
+                    <div class="implication-item">
+                        <div class="implication-header">
+                            <span>Animateur</span>
+                            <span class="arrow">&#9654;</span>
+                        </div>
+                        <div class="implication-content">
+                            <p>
+                                Deviens animateur et partage ta passion avec les jeunes! Tu participeras à l’organisation d’activités, à l’encadrement des groupes et tu développeras des compétences en animation, gestion et leadership dans une ambiance conviviale.
+                            </p>
+                        </div>
                     </div>
-                <br><br><br><br><br><br>
+                    <div class="implication-item">
+                        <div class="implication-header">
+                            <span>Membre du CA</span>
+                            <span class="arrow">&#9654;</span>
+                        </div>
+                        <div class="implication-content">
+                            <p>
+                                Rejoins le conseil d’administration pour contribuer à la gestion et à la vision du groupe. Idéal pour ceux qui aiment organiser, planifier et soutenir la mission scoute en arrière-plan.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="implication-item">
+                        <div class="implication-header">
+                            <span>Aide de camps ou d'activités</span>
+                            <span class="arrow">&#9654;</span>
+                        </div>
+                        <div class="implication-content">
+                            <p>
+                                Donne un coup de main ponctuel lors des camps ou événements spéciaux! Aucune expérience requise, juste l’envie d’aider et de vivre l’aventure scoute de l’intérieur.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <h2 id="photos" class ="title">Section photos</h2>
                 <br><br>
@@ -280,7 +297,64 @@
                         <p>
                             
                         </p>
-                    </div>      
+                    </div>
+            <div id="footer">
+                <div id="footer-top">
+                    <div id="footer-icons">
+                        <img src="images/foulard.png" alt="Scout 49e icon" id="foulard"><br>
+                        <img src="images/ASC_horisontal.png" alt="ASC icon" id="ASC">
+                    </div>
+                    <div id="footer-grid">
+                        <div>
+                            <h5>L'histoire du scoutisme</h5>
+                            <ul id="liste-histoire">
+                                <li>Les origines</li>
+                                <li>L'ASC</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h5>Le 49e groupe scout</h5>
+                            <ul id="liste-49">
+                                <li>Petit historique</li>
+                                <li>Les différents groupes d'âges au 49e</li>
+                                <li>La terre des scouts</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h5>Les moyens de financements</h5>
+                            <ul id="liste-financement">
+                                <li>Calendrier</li>
+                                <li>Chocolat</li>
+                                <li>Lave-O-Thon</li>
+                                <li>Canette</li>
+                                <li>Vêtement</li>
+                                <li>Dons</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h5>Comment s'impliquer?</h5>
+                            <ul id="liste-implication">
+                                <li>Animateur</li>
+                                <li>Membre du CA</li>
+                                <li>Aide de camps ou d'activités</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h5>Section photos</h5>
+                            <ul id="liste-photos">
+                                <li>Photos de nos activités</li>
+                                <li>Photos de nos camps</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="nous-rejoindre">
+                        Comment nous rejoindre?<br>
+                    </div>
+                </div>
+                <div id="footer-bottom">
+
+                </div>
+            </div>  
         </div>
     </body>
 </html>
