--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             </div>
                     </div>
                 <br><br><br><br><br><br>
-            <img src="images/quote-2.png" alt="Citation de Baden-Powell" class="quote">
+            <img src="images/Quote-2.png" alt="Citation de Baden-Powell" class="quote">
             <div  id="text-49">
                 <br><br><br><br><br>
                 <h2 id="49" class ="title">Le 49e groupe scout</h2>
@@ -248,7 +248,7 @@
                 </div>
                 <br><br><br><br><br><br>
             </div>
-             <img src="images/quote-1.png" alt="Citation de Baden-Powell" class="quote">
+             <img src="images/Quote-1.png" alt="Citation de Baden-Powell" class="quote">
             <div id="text-implication">
                 <br><br><br><br><br>
                 <h2 id="implication" class="title">Comment s'impliquer?</h2>
