--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h2 id="histoire" class ="title">Histoire du scoutisme</h2>
                 <br><br>
                     <div class ="text">
-                        <h3>Les origines</h3>
+                        <h3 id="origines">Les origines</h3>
                             <div id="text-origines" class="text-and-picture">
                                 <p>
                                     <em>
@@ -67,7 +67,7 @@
                                 </p>
                             </div>
                             <br><br><br><br>
-                        <h3>L'ASC</h3>
+                        <h3 id="ASC">L'ASC</h3>
                             <div id="tap-ASC"  class="text-and-picture">
                                 <p>
                                     <div class="container-image">
@@ -98,7 +98,7 @@
                 <br><br><br><br><br>
                 <h2 id="49" class ="title">Le 49e groupe scout</h2>
                 <br><br>
-                        <h3>Petit historique</h3>
+                        <h3 id="histoire-49">Petit historique</h3>
                             <div id="tap-historique" class="text-and-picture">
                                 <p class="text-historique">
                                     En 1954, le Club Richelieu de Saint-Georges a eu l’initiative de créer un mouvement scout dans la région. Leur souhait s’est concrétisé en 1955, marquant la naissance du scoutisme à Saint-Georges.
@@ -119,7 +119,7 @@
                                 </p>  
                             </div>
                         <br><br><br><br>
-                        <h3>Les différents groupes d'âges au 49e</h3>
+                        <h3 id="âge">Les différents groupes d'âges au 49e</h3>
                             <div id="tap-âges"  class="text-and-picture">
                                 <p>
                                     <div class="container-image">
@@ -144,7 +144,7 @@
                                 </p>
                             </div>
                         <br><br><br><br>
-                        <h3>La terre des scouts</h3>
+                        <h3 id="terre">La terre des scouts</h3>
                             <div id="tap-terre" class="text-and-picture" >
                                 <div>
                                     <p class="text-terre">
@@ -308,35 +308,35 @@
                         <div>
                             <h5>L'histoire du scoutisme</h5>
                             <ul id="liste-histoire">
-                                <li>Les origines</li>
-                                <li>L'ASC</li>
+                                <li><a href="#origines">Les origines</a></li>
+                                <li><a href="#ASC">L'ASC</a></li>
                             </ul>
                         </div>
                         <div>
                             <h5>Le 49e groupe scout</h5>
                             <ul id="liste-49">
-                                <li>Petit historique</li>
-                                <li>Les différents groupes d'âges au 49e</li>
-                                <li>La terre des scouts</li>
+                                <li><a href="#histoire-49">Petit historique</a></li>
+                                <li><a href="#âge">Les différents groupes d'âges au 49e</a></li>
+                                <li><a href="#terre">La terre des scouts</a></li>
                             </ul>
                         </div>
                         <div>
                             <h5>Les moyens de financements</h5>
                             <ul id="liste-financement">
-                                <li>Calendrier</li>
-                                <li>Chocolat</li>
-                                <li>Lave-O-Thon</li>
-                                <li>Canette</li>
-                                <li>Vêtement</li>
-                                <li>Dons</li>
+                                <li><a href="#financement">Calendrier</a></li>
+                                <li><a href="#financement">Chocolat</a></li>
+                                <li><a href="#financement">Lave-O-Thon</a></li>
+                                <li><a href="#financement">Canette</a></li>
+                                <li><a href="#financement">Vêtement</a></li>
+                                <li><a href="#financement">Dons</a></li>
                             </ul>
                         </div>
                         <div>
                             <h5>Comment s'impliquer?</h5>
                             <ul id="liste-implication">
-                                <li>Animateur</li>
-                                <li>Membre du CA</li>
-                                <li>Aide de camps ou d'activités</li>
+                                <li><a href="#implication">Animateur</a></li>
+                                <li><a href="#implication">Membre du CA</a></li>
+                                <li><a href="#implication">Aide de camps ou d'activités</a></li>
                             </ul>
                         </div>
                         <div>
@@ -348,7 +348,17 @@
                         </div>
                     </div>
                     <div id="nous-rejoindre">
-                        Comment nous rejoindre?<br>
+                        <h5 id="comment-nous-rejoindre">Comment nous rejoindre ?</h5>
+                        <div class="contact-buttons">
+                            <a class="contact-btn mail" href="mailto:49groupescout@gmail.com" target="_blank">
+                                <img src="images/gmail.png" alt="Gmail" class="contact-icon">
+                                Écrire au groupe
+                            </a>
+                            <a class="contact-btn facebook" href="https://www.facebook.com/share/1AzCKuW55y/" target="_blank">
+                                <img src="images/facebook.png" alt="Facebook" class="contact-icon">
+                                Page Facebook
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div id="footer-bottom">
