--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                         minutes du local scout, permet l’organisation de camps d’été et d’hiver et constitue un lieu
                                         privilégié pour vivre le scoutisme en nature.
                                     </p>
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d36555.92660470899!2d-70.70639430892892!3d46.15435237119812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d46.1241299!2d-70.6822658!4m5!1s0x4cb9bdb3b7d5a207%3A0x58ab1ae44d5db9c9!2sTerre%20des%20scouts!3m2!1d46.2112049!2d-70.6228409!5e1!3m2!1sfr!2sca!4v1748189560941!5m2!1sfr!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d86963.74460685164!2d-70.69404505159659!3d46.14257281238155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x4cb9bf94cf6e9c0f%3A0x252e366638462783!2s11005%201re%20Avenue%2C%20Saint-Georges%2C%20QC!3m2!1d46.1241901!2d-70.68222209999999!4m5!1s0x4cb9bdb3b7d5a207%3A0x58ab1ae44d5db9c9!2sTerre%20des%20scouts%2C%20752%20Rang%20Cumberland%2C%20Saint-Benjamin%2C%20QC%20G5Z%200C7!3m2!1d46.2112049!2d-70.6228409!5e1!3m2!1sfr!2sca!4v1748233861043!5m2!1sfr!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 </div>
                                 <p>
                                     <div class="container-image">
@@ -351,11 +351,11 @@
                         <h5 id="comment-nous-rejoindre">Comment nous rejoindre ?</h5>
                         <div class="contact-buttons">
                             <a class="contact-btn mail" href="mailto:49groupescout@gmail.com" target="_blank">
-                                <img src="images/gmail.png" alt="Gmail" class="contact-icon">
+                                <img src="images/gmail.png" alt="Gmail" class="contact-mail">
                                 Écrire au groupe
                             </a>
                             <a class="contact-btn facebook" href="https://www.facebook.com/share/1AzCKuW55y/" target="_blank">
-                                <img src="images/facebook.png" alt="Facebook" class="contact-icon">
+                                <img src="images/facebook.png" alt="Facebook" class="contact-face">
                                 Page Facebook
                             </a>
                         </div>
