Last small tweeking and picture in financement

--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
                     <div class="financement-item" data-title="Calendrier" data-image="images/calendrier.png" onclick="showDetails(this)">
                         <h4>Calendrier</h4>
                         <div class="financement-details" style="display:none;">
-                            Le calendrier est une campagne annuelle où nous vendons des calendriers personnalisés pour financer nos activités.
+                            Le calendrier est une campagne annuelle classique où nous vendons des calendriers personnalisés pour financer nos activités.
                         </div>
                     </div>
-                    <div class="financement-item" data-title="Chocolat" data-image="images/chocolat.png" onclick="showDetails(this)">
+                    <div class="financement-item" data-title="Chocolat" data-image="images/pralinière.png" onclick="showDetails(this)">
                         <h4>Chocolat</h4>
                         <div class="financement-details" style="display:none;">
                             La vente de chocolat est une tradition qui aide à financer nos projets tout en offrant de délicieuses friandises.
@@ -208,13 +208,13 @@
                             La collecte de canettes est une initiative écologique et financière pour soutenir nos activités.
                         </div>
                     </div>
-                    <div class="financement-item" data-title="Vêtement" data-image="images/linge.png" onclick="showDetails(this)">
+                    <div class="financement-item" data-title="Vêtement" data-image="images/vêtement.png" onclick="showDetails(this)">
                         <h4>Vêtement</h4>
                         <div class="financement-details" style="display:none;">
-                            Nous collectons des vêtements usagés pour les revendre ou les recycler afin de financer nos projets.
+                            La vente de vêtements est une autre façon de financer nos activités tout en promouvant notre groupe, une partie des revenus nous reviens.
                         </div>
                     </div>
-                    <div class="financement-item" data-title="Dons" data-image="images/dons.png" onclick="showDetails(this)">
+                    <div class="financement-item"  data-title="Dons" data-image="images/dons.png" onclick="showDetails(this)">
                         <h4>Dons</h4>
                         <div class="financement-details" style="display:none;">
                             Le 49e groupe scout de Saint-Georges ne pourrait poursuivre sa mission sans le soutien généreux de <b>précieux partenaires</b>.<br><br>
@@ -263,7 +263,7 @@
                         </div>
                         <div class="implication-content">
                             <p>
-                                Deviens animateur et partage ta passion avec les jeunes! Tu participeras à l’organisation d’activités, à l’encadrement des groupes et tu développeras des compétences en animation, gestion et leadership dans une ambiance conviviale.
+                                Deviens animateur et partage ta passion avec les jeunes! Tu participeras à l’organisation d’activités, à l’encadrement des groupes et tu développeras des compétences en animation, gestion et leadership dans une ambiance conviviale. Ce poste te prendra seulement 3 heures par semaine, mais tu pourras t’impliquer plus si tu le souhaites!
                             </p>
                         </div>
                     </div>
@@ -274,7 +274,7 @@
                         </div>
                         <div class="implication-content">
                             <p>
-                                Rejoins le conseil d’administration pour contribuer à la gestion et à la vision du groupe. Idéal pour ceux qui aiment organiser, planifier et soutenir la mission scoute en arrière-plan.
+                                Rejoins le conseil d’administration pour contribuer à la gestion et à la vision du groupe. Idéal pour ceux qui aiment organiser, planifier et soutenir la mission scoute en arrière-plan et se, pour seulement 5h par mois.
                             </p>
                         </div>
                     </div>
